# extension-template-rs

./: .gitignore  .gitmodules  Cargo.toml  Makefile
examples/: basic_usage.rs  run.sql
src/: lib.rs
