[package]
name = "duckdb_hello"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
strip = true

[lib]
name = "hello"                  # name used for loading extension
crate-type = ["cdylib", "rlib"]


[[example]]
# crate-type can't be (at the moment) be overriden for specific targets
# src/wasm_lib.rs forwards to src/lib.rs so that we can change from cdylib
# (that is needed while compiling natively) to staticlib (needed since the
# actual linking will be done via emcc
name = "rusty_quack"
path = "src/wasm_lib.rs"
crate-type = ["staticlib"]

[dependencies]
duckdb = { path = "./duckdb-rs/crates/duckdb", features = ["vtab-loadable"] }
duckdb-loadable-macros = { path = "./duckdb-rs/crates/duckdb-loadable-macros", default-features = false }
libduckdb-sys = { path = "./duckdb-rs/crates/libduckdb-sys" }

[features]
loadable-extension = ["libduckdb-sys/loadable-extension"]
buildtime_bindgen = ["duckdb/buildtime_bindgen"]
bundled = ["duckdb/bundled"]
